# quickjs-android

./: .gitignore  .gitmodules  README.md  android-maven-gradle.gradle  build.gradle  gradle.properties  settings.gradle
android-test/: CMakeLists.txt  build.gradle
android-test/src/main/: AndroidManifest.xml
android-test/src/main/java/com/hippo/quickjs/android/test/: App.kt  LogView.kt  MessagePrinter.kt  MessageQueue.kt  Printer.kt  TestActivity.kt  Tester.kt
android-test/src/main/res/xml/: file_paths.xml
buildSrc/: build.gradle
buildSrc/src/main/java/com/hippo/quickjs/android/: PatchTask.java
gradle/wrapper/: gradle-wrapper.properties
quickjs/: CMakeLists.txt  build.gradle  patch.c  patch.h  patch_test.c  qjscalc.c  quickjs.patch  repl-bn.c  repl.c
